# WackeryBackend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  readme.md
BCF/: Cargo.toml
BCF/src/: lib.rs
backend/: Cargo.toml
backend/src/: backend.rs  main.rs  northwood.rs
backend/src/routes/: basics.rs  mod.rs  northwood.rs  query.rs
lurky/: Cargo.toml  sqlx-data.json
lurky/migrations/: 20230319172153_inital.sql
lurky/src/: config.rs  lib.rs  query.rs
lurky/src/db/: mem.rs  mod.rs  postgres.rs
migrate/: Cargo.toml
migrate/src/: main.rs
