[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
anyhow = "1.0.70"
clap = { version = "4.1.11", features = ["env", "derive"] }
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
parking_lot = "0.12.1"
lazy_static = "1.4.0"
time = { version = "0.3.20", features = ["serde", "formatting", "parsing"] }
async-trait = "0.1.67"
futures = "0.3.27"
lurky = { path = "../lurky" }