[package]
name = "lurky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.67"
time = { version = "0.3.20", features = ["serde", "formatting", "parsing"] }
parking_lot = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.3", features = ["time", "postgres", "json", "runtime-tokio-rustls", "offline"] }
serde_with = { version = "2.3.1", features = ["time_0_3"] }
BCF = { path = "../BCF" }
