[package]
name = "migrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
time = { version = "0.3.20", features = ["serde", "formatting", "parsing"] }
clap = { version = "4.1.11", features = ["env", "derive"] }
indicatif = { version = "0.17.3", features = ["rayon", "improved_unicode"] }
lurky = { path = "../lurky" }
rayon = "1.7.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
serde_with = { version = "2.3.1", features = ["time_0_3"] }
